# cmake-xcode-module-path-bug

./: CMakeLists.txt  Lib1.swift  Package.swift  README.md
Lib1/: CMakeLists.txt  Lib1.swift
Lib2/: CMakeLists.txt
